# pem-ec-designer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: STATUS.md  UI-LAUNCH-NOTES.md
docs/adr/: 001-framework-choice.md  002-library-architecture.md  003-qt-binding-license.md
docs/decisions/: 000-roadmap.html  001-library-scope.html  002-framework-adr.html  003-adr-conflicts.html  004-library-architecture.html  005-github-deploy.html  006-session-handoff.html
docs/mockups/: README.md  library-decision.html  v1-target-ui copy.html  v1-target-ui.html
scripts/: smoke_mainwindow.py  smoke_pyvistaqt.py
src/pem_ec_designer/: __init__.py  __main__.py
src/pem_ec_designer/assembly/: __init__.py
src/pem_ec_designer/foundation/: __init__.py  constants.py  units.py
src/pem_ec_designer/geometry/: __init__.py  extruded.py  flow_field.py  membrane.py
src/pem_ec_designer/materials/: __init__.py  loader.py
src/pem_ec_designer/physics/: __init__.py
src/pem_ec_designer/schema/: __init__.py  cli.py  component.py  material.py  source.py  units.py
src/pem_ec_designer/ui/: __init__.py  main_window.py  qt_env.py  viewer.py
src/pem_ec_designer/visualization/: __init__.py
tests/: test_geometry_extruded.py  test_geometry_flow_field.py  test_geometry_membrane.py  test_library.py  test_no_qt_imports.py  test_schema.py  test_units.py
